<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_signup_rl"
    tools:context="com.android.hamdy.dss_project.Views.Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:src="@mipmap/ic_launcher"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_signup_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name_signup_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_signup_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_signup_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_signup_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password_signup_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>

                </android.support.design.widget.TextInputLayout>

                 <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirmPassword_signup_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/confirmPassword_signup_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"/>

                <Button
                    android:id="@+id/sign_in_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"/>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>




    </LinearLayout>
</RelativeLayout>
